changes to the five page

--- a/five.html
+++ b/five.html
@@ -8,44 +8,37 @@
 </head>
 <body>
 <nav class="app-bar">
-  <a href="index.html" style="align-self: center"><img src="/img/back_button.png" alt="button menu" style="width: 16px;
+  <a href="index.html" style="align-self: center"><img src="./img/Shape.png" alt="button menu" style="width: 16px;
   height: 16px; top: 46px; left: 19px; color: #FFFFFF; padding-left: 10px"></a>
   <h1 class="title-news">
-    Тур вихідного дня "Гостинність Чорнобаївки</h1>
-  <img src="/img/settings.png" alt="button menu" style="width: 12px;
-  height: 24px; top: 64px; left: 19px; color: #FFFFFF; align-self: center; padding-right: 10px">
+   Квест-тур "Київ за 3 дні"</h1>
+  <img src="./img/3tochki.png" alt="button menu" style="width: 5px;
+  height: 16px; top: 64px; left: 19px; color: #FFFFFF; align-self: center; padding-right: 10px">
 </nav>
 
 <div class="main-info-details">
   <div class="card">
-    <img src="/img/5.png" alt="first news" class="img-detail">
+    <img src="./img/Київ за 3 дні.png" alt="first news" class="img-detail">
     <div class="content-detail">
-      <img src="./img/favourite.png" class="img-favourite-details">
-      <img src="./img/share.png" class="img-share-details">
+      <img src="./img/favorite.png" class="img-favourite-details">
+      <img src="./img/Share.png" class="img-share-details">
     </div>
   </div>
 
-  <p class="p-details">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias animi esse facilis fugit
-    inventore natus
-    repellendus sed sint sunt. Adipisci alias aperiam illo officia optio perspiciatis quia quibusdam quod sunt?</p>
+  <p class="p-details">Tour "Kyiv in 3 days" is a rich journey through the capital of Ukraine, which will allow you to see the most famous historical and cultural sights of the city. The program of the tour includes visits to St. Sophia Cathedral, Kyiv-Pechersk Lavra, Independence Square, Andriyivsky Uzvoz and other key places. Walks along the Dnipro River, modern museums and gastronomic stops will complement the impression of Kyiv. The tour is designed to experience the spirit and beauty of the city as much as possible in a short time.</p>
 
   <div class="container-reviews">
     <h1>Відгуки</h1>
     <div class="card-container">
-      <img src="img/user1.png" class="img-user">
+      <img src="./img/Anton.jpg" class="img-user" alt= "avatar" style="border-radius: 50%;  object-fit: cover;">
       <div class="comments-card">
-        <p class="text-comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad atque, commodi consequatur
-          eveniet explicabo, illum
-          magnam magni necessitatibus nemo odit officia omnis, optio perferendis quo vel. Aliquid blanditiis
-          necessitatibus
-          voluptatibus.</p>
+        <p class="text-comment">The "Kyiv in 3 days" tour was just perfect for a quick introduction to the capital! During this time, we saw the most famous sights, and I felt the real atmosphere of Kyiv. The tour guide was excellent, everything was organized at a high level. Three days flew by imperceptibly!</p>
       </div>
     </div>
     <div class="card-container">
-      <img src="img/user2.png" class="img-user">
+      <img src="./img/Yana.jpg" class="img-user" alt= "avatar" style="border-radius: 50%;  object-fit: cover;">
       <div class="comments-card">
-        <p class="text-comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad atque, commodi consequatur
-          eveniet explicabo, illum</p>
+        <p class="text-comment">This tour really helped to get enough of Kyiv in a short time. The architecture of the Lavra was impressive, and a walk along the Andriiivsky Uzvoz gave special emotions. I managed to see so many interesting things in just three days - I'm glad I chose this particular tour!</p>
       </div>
     </div>
   </div>
@@ -53,11 +46,11 @@
   <div>
     <h1>Наступна подія</h1>
     <div style="display: flex">
-      <img src="img/icon-date.png" class="icon-details">
+      <img src="./img/calendar.svg" class="icon-details">
       <p><a href="" style="color: #6FB285; padding-left: 5px; text-decoration: none">15 травня 2022</a></p>
     </div>
     <div style="display: flex">
-      <img src="img/icon-people.png" class="icon-details">
+      <img src="./img/user-group.svg" class="icon-details">
       <p><a href="" style="color: #6FB285; padding-left: 8px; text-decoration: none">Кількість місць необмежена</a></p>
     </div>
   </div>
