--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <div class="card">
     <img src="./img/Київ за 3 дні.png" alt="five news" class="img-main">
     <div class="content">
-      <h1 style="font-size: 15px"><a href="five.html" class="more-info">Квест тур "Київ за 3 дні</a></h1>
+      <h1 style="font-size: 15px"><a href="five.html" class="more-info">Квест-тур "Київ за 3 дні"</a></h1>
       <img src="./img/favorite.png" class="img-favourite-and-share">
       <img src="./img/Share.png" class="img-favourite-and-share">
     </div>
