--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
     <ul id="menu">
       <div class="menu-item">
+        <img src="./img/user.svg" alt="Icon" class="icon">
+        <a href="#">Мій профіль</a>
+      </div>
+      <div class="menu-item">
         <img src="img/cart.svg" alt="Icon" class="icon">
         <a href="#">Замовлення</a>
       </div>
