--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 
 
     <ul id="menu">
+      <div class="myPage" style="position: relative;">
+        <img src="./img/Pattern.png" alt="myPage" class="page" style="width: 100%; height: auto; display: block; margin: 0 auto; background: linear-gradient(246.63deg, #397872 2.69%, #819745 101.82%); margin-bottom: 15px;">
+        <img src="./img/Avatar.png" alt="myAvatar" class="avatar" style="position: absolute; top: 35%; left: 50%; transform: translate(-50%, -50%); width: 65px; height: auto; border-radius: 50%;">
+        <p style="position: absolute; top: 70%; left: 50%; transform: translate(-50%, -50%); font-size: 14px; color: white; font-weight: 500;">Демьяненко Ганна</p>
+      </div>
       <div class="menu-item">
         <img src="./img/user.svg" alt="Icon" class="icon">
         <a href="#">Мій профіль</a>
@@ -59,7 +64,7 @@
     <div class="content">
       <h1 style="font-size: 15px"><a href="first.html" class="more-info">Тур вихідного дня "Гостинність
         Чорнобаївки"</a></h1>
-      <img src="./img/favorite.png" class="img-favourite-and-share">
+      <img src="./img/favorite.png" class="img-favourite-and-share" style="width: 30px; height: auto;">
       <img src="./img/Share.png" class="img-favourite-and-share">
     </div>
   </div>
@@ -68,7 +73,7 @@
     <img src="./img/Дайвінг-тур Таємниці Зміїного.png" alt="second news" class="img-main">
     <div class="content">
       <h1 style="font-size: 15px"><a href="second.html" class="more-info">Дайвінг-тур "Таємниці Зміїного"</a></h1>
-      <img src="./img/favorite.png" class="img-favourite-and-share">
+      <img src="./img/favorite.png" class="img-favourite-and-share"  style="width: 30px; height: auto;">
       <img src="./img/Share.png" class="img-favourite-and-share">
     </div>
   </div>
@@ -77,7 +82,7 @@
     <img src="./img/Сафарі-тур “Гадяцький”.png" alt="three news" class="img-main">
     <div class="content">
       <h1 style="font-size: 15px"><a href="three.html" class="more-info">Сафарі-тур "Гадяцький"</a></h1>
-      <img src="./img/favorite.png" class="img-favourite-and-share">
+      <img src="./img/favorite.png" class="img-favourite-and-share"  style="width: 30px; height: auto;">
       <img src="./img/Share.png" class="img-favourite-and-share">
     </div>
   </div>
@@ -86,7 +91,7 @@
     <img src="./img/Майстер-клас “Ромський”.png" alt="four news" class="img-main">
     <div class="content">
       <h1 style="font-size: 15px"><a href="four.html" class="more-info">Майстер клас "Ромський"</a></h1>
-      <img src="./img/favorite.png" class="img-favourite-and-share">
+      <img src="./img/favorite.png" class="img-favourite-and-share"  style="width: 30px; height: auto;">
       <img src="./img/Share.png" class="img-favourite-and-share">
     </div>
   </div>
@@ -95,7 +100,7 @@
     <img src="./img/Київ за 3 дні.png" alt="five news" class="img-main">
     <div class="content">
       <h1 style="font-size: 15px"><a href="five.html" class="more-info">Квест-тур "Київ за 3 дні"</a></h1>
-      <img src="./img/favorite.png" class="img-favourite-and-share">
+      <img src="./img/favorite.png" class="img-favourite-and-share"  style="width: 30px; height: auto;">
       <img src="./img/Share.png" class="img-favourite-and-share">
     </div>
   </div>
