--- a/first.html
+++ b/first.html
@@ -23,7 +23,7 @@
   <div class="card">
     <img src="./img/Тур вихідного дня “Гостинність Чорнобаївки”.png" alt="first news" class="img-detail">
     <div class="content-detail">
-      <img src="./img/favorite.png" class="img-favourite-details">
+      <a href="index.html" ><img src="./img/favorite.png" class="img-favourite-details"></a>
       <img src="./img/Share.png" class="img-share-details">
     </div>
   </div>
