--- a/side.html
+++ b/side.html
@@ -75,7 +75,7 @@
         </nav>
       </div>
       <div class="side-wall">
-        <div class="close" onclick="location.href='index.html'"></div>
+        <div class="backwrd" onclick="location.href='index.html'"></div>
       </div>
     </div>
     <div class="android-menu-side">
