--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
               >Тур вихідного дня “Гостинність Чорнобаївки”</a
             >
           </div>
-          <div class="heart" onclick=""></div>
-          <div class="share" onclick=""></div>
+          <div class="heart" onclick="location.href='detail.html'"></div>
+          <div class="share" onclick="location.href='detail.html'"></div>
         </div>
       </div>
       <div class="news2 news">
