--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
+  <title>PZ_1_4</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    
+  <nav class="main-nav hamburger-menu">
+    <input id="menu__toggle" type="checkbox" />
+    <label class="menu__btn" for="menu__toggle">
+        <span></span>
+    </label>
+    <ul class="menu__box">
+        <!-- Профіль користувача -->
+        <li class="menu__profile">
+            <div class="profile__icon">
+                <i class="fas fa-user"></i>
+            </div>
+            <p class="profile__name">Андрій Cергійович</p>  
+        </li>
+
+        <!-- Інші пункти меню -->
+        <li><a class="menu__item" href="#"><i class="fas fa-user"></i> Мій профіль</a></li>
+        <li><a class="menu__item" href="#"><i class="fas fa-box"></i> Замовлення</a></li>
+        <li><a class="menu__item" href="#"><i class="fas fa-envelope"></i> Повідомлення</a></li>
+        <li><a class="menu__item" href="#"><i class="fas fa-heart"></i> Улюблене</a></li>
+        <li><a class="menu__item" href="#"><i class="fas fa-users"></i> Друзі</a></li>
+        <li><a class="menu__item" href="#"><i class="fas fa-bell"></i> Сповіщення</a></li>
+        <li><a class="menu__item" href="#"><i class="fas fa-cog"></i> Налаштування</a></li>
+    </ul>
+</nav>
+
 </body>
 </html>
