--- a/index.html
+++ b/index.html
@@ -8,21 +8,18 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-  <nav class="main-nav hamburger-menu">
+  <header class="main-nav hamburger-menu">
     <input id="menu__toggle" type="checkbox" />
     <label class="menu__btn" for="menu__toggle">
         <span></span>
     </label>
     <ul class="menu__box">
-        <!-- Профіль користувача -->
         <li class="menu__profile">
             <div class="profile__icon">
                 <i class="fas fa-user"></i>
             </div>
             <p class="profile__name">Андрій Cергійович</p>  
         </li>
-
-        <!-- Інші пункти меню -->
         <li><a class="menu__item" href="#"><i class="fas fa-user"></i> Мій профіль</a></li>
         <li><a class="menu__item" href="#"><i class="fas fa-box"></i> Замовлення</a></li>
         <li><a class="menu__item" href="#"><i class="fas fa-envelope"></i> Повідомлення</a></li>
@@ -31,7 +28,41 @@
         <li><a class="menu__item" href="#"><i class="fas fa-bell"></i> Сповіщення</a></li>
         <li><a class="menu__item" href="#"><i class="fas fa-cog"></i> Налаштування</a></li>
     </ul>
-</nav>
-
+    <h1>Популярні тури</h1>
+</header>
+<div class="container">
+    <div class="tour-list">
+        <div class="tour-card">
+            <img src="/pz-1-4/img/chornobaiivka.png" alt="Тур вихідного дня 'Гостинність Чернобаївки'">
+            <div class="tour-info">
+                <h2>Тур вихідного дня "Гостинність Чернобаївки"</h2>
+            </div>
+        </div>
+        <div class="tour-card">
+            <img src="/pz-1-4/img/zmiy.png" alt="Дайвінг-тур 'Таємниці Зміїного'">
+            <div class="tour-info">
+                <h2>Дайвінг-тур "Таємниці Зміїного"</h2>
+            </div>
+        </div>
+        <div class="tour-card">
+            <img src="/pz-1-4/img/gad.png" alt="Сафарі-тур 'Гадяцький'">
+            <div class="tour-info">
+                <h2>Сафарі-тур "Традиційний"</h2>
+            </div>
+        </div>
+        <div class="tour-card">
+            <img src="/pz-1-4/img/rom.png" alt="Майстер-клас 'Ромський'">
+            <div class="tour-info">
+                <h2>Майстер-клас "Ромський"</h2>
+            </div>
+        </div>
+        <div class="tour-card">
+            <img src="/pz-1-4/img/kyiv.png" alt="Квест-тур 'Київ за три дні'">
+            <div class="tour-info">
+                <h2>Квест-тур "Київ за три дні"</h2>
+            </div>
+        </div>
+    </div>
+</div>  
 </body>
 </html>
