Твоє повідомлення про зміни

--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
       <img src="/img/imgForMenu/Pattern.png" alt="" class="background-img">
       <img src="/img/imgForMenu/Ellipse 1.png" alt="Накладене зображення" class="overlay-image">
       <img src="/img/imgForMenu/Vector.png" alt="Накладене зображення" class="vector-image">
-      <h3 class="account-signature">Andrii Kozhukhar</h3>
+      <h3 class="account-signature" >Андрій Кожухар</h3>
     </div>
 
     <div class="icon-text-container">
@@ -48,7 +48,9 @@
   </div>
   
     <div class="exit">
-      <img src="/img/imgForMenu/close.png" alt="">
+      <a href="index.html">
+      <img src="/img/imgForMenu/close.png" alt="close" class="close-img" >
+      </a>
     </div>
   </main>
   <footer>
