--- a/pz-1-4/index.html
+++ b/pz-1-4/index.html
@@ -37,7 +37,7 @@
     <div class="main-content">
       <div class="tour-card">
         <div class="tour-image">
-          <a href="tour1.html">
+          <a href="index_tour.html">
             <img
               src="img/explosion.png"
               alt="Тур вихідного дня 'Гостинність Чорнобаївки'"
