--- a/pz-1-4/index.html
+++ b/pz-1-4/index.html
@@ -47,7 +47,7 @@
           <div class="tour-title">
             Тур вихідного дня "Гостинність Чорнобіївки"
             <div class="tour-actions">
-              <a href="#"
+              <a href="index_tour.html"
                 ><img src="img/like.png" alt="Fav" class="action-icon"
               /></a>
               <a href="#"
