'Оновлені файли index, menu, та page'

--- a/index.html
+++ b/index.html
@@ -14,23 +14,24 @@
 
       <div class="app_bar">
 
-        <div class="menu" onclick="location.href='menu.html'"></div>
+        <div class="menu" onclick="location.href='./menu.html'"></div>
         <div class="tour-title ">
           <a> Популярні тури</a>
         </div>
       </div>
-      
-      <div class="news-container news-item-image1">
-        <div class="flex-container">
-          <div class="text">
-            <a href="/page.html">Тур вихідного дня “Гостинність Чорнобаївки”</a>
-          </div>
-          <div class="icon-buttons">
-            <div class="like"></div>
-            <div class="share"></div>
+      <a href="./page.html">
+        <div class="news-container news-item-image1">
+          <div class="flex-container">
+            <div class="text">
+              Тур вихідного дня “Гостинність Чорнобаївки”
+            </div>
+            <div class="icon-buttons">
+              <div class="like"></div>
+              <div class="share"></div>
+            </div>
           </div>
         </div>
-      </div>
+      </a>
       <div class="news-container news-item-image2">
         <div class="flex-container">
           <div class="text">
