--- a/menu.html
+++ b/menu.html
@@ -9,8 +9,8 @@
 <body>
    <div class="container">
     <div class="shape" >
-      <a href="/index.html">
-        <img src="/img/Shape.png" alt="">
+      <a href="./index.html">
+        <img src="./img/Shape.png" alt="">
       </a>
     </div>
     <div class="menu-panel">
@@ -22,8 +22,6 @@
           <a class="my_name">Bohdan Beznoshchuk</a>
         </div>
       </div>
-
-
       <nav class="choices">
         <ul class="menu-list">
           <li>
