--- a/page.html
+++ b/page.html
@@ -8,26 +8,26 @@
 </head>
 <body>
     <header>
-      <a href="/index.html">
-        <img src="img/back.png" alt="" class="back-img" >
+      <a href="./index.html">
+        <img src="./img/back.png" alt="" class="back-img" >
       </a>
         <h3 class="header-text">
           <b>
             Тур вихідного дня “Чор...
           </b>
         </h3>
-        <img src="img/Sha.png" alt="" class="more-img" >
+        <img src="./img/Sha.png" alt="" class="more-img" >
     </header>
 
     <main>
         <div class="photo-container">
-              <img src="img/photo1.png" alt="Тур вихідного дня" class="photo">
+              <img src="./img/photo1.png" alt="Тур вихідного дня" class="photo">
             <div class="photo-overlay">
               <div class="photo-caption">
               </div>
               <div class="photo-icons">
-                <img src="img/favorite.png" alt="Лайк" class="icon-like-icon">
-                <img src="img/bounds.png" alt="Поділитися" class="icon-share-icon">
+                <img src="./img/favorite.png" alt="Лайк" class="icon-like-icon">
+                <img src="./img/bounds.png" alt="Поділитися" class="icon-share-icon">
               </div>
             </div>
           </div>
@@ -36,14 +36,14 @@
             <h4 class="reviews">Відгуки</h4>
         </p>
         <div class="message">
-            <img src="/img/Oval.png" alt="Кругле фото" class="circle-image">
+            <img src="./img/Oval.png" alt="Кругле фото" class="circle-image">
             <div class="image-container">
                 <div class="text-overlay">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna wirl aliqua. Up exlaborum incididunt quis nostrud exercitatn. 
                 </div>
             </div>
 
-            <img src="/img/Oval-woman.png" alt="Кругле фото" class="circle-image-woman">
+            <img src="./img/Oval-woman.png" alt="Кругле фото" class="circle-image-woman">
             <div class="image-container">
                  <div class="text-overlay">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit         
@@ -55,19 +55,19 @@
             <h4 class="next-step">Наступна подія</h4>
         </p>
         <div class="icon-text">
-            <img src="/img/Group 6.png" alt="Icon 1" class="icon">
+            <img src="./img/Group 6.png" alt="Icon 1" class="icon">
             <span class="text">Мій профіль</span>
         </div>
         <div class="icon-text">
-            <img src="/img/social.png" alt="Icon 2" class="icon">
+            <img src="./img/social.png" alt="Icon 2" class="icon">
             <span class="text">Замовлення</span>
         </div>
         <button class="button-booking"><b>ЗАБРОНЮВАТИ</b></button>
     </main>
     <footer>
-      <img src="img/back.png" alt="" class="icon-back-icon">
-      <img src="img/home.png" alt="" class="icon-home-icon"> 
-      <img src="img/recent.png" alt="" class="icon-recent-icon">
+      <img src="./img/back.png" alt="" class="icon-back-icon">
+      <img src="./img/home.png" alt="" class="icon-home-icon"> 
+      <img src="./img/recent.png" alt="" class="icon-recent-icon">
     </footer>
 </body>
 <br>
