fix absolute path

--- a/index.html
+++ b/index.html
@@ -3,66 +3,79 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
   <title>PZ_1_4</title>
-  <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
+  <link rel="stylesheet" type="text/css" href="./css/burger_menu.css">
 </head>
 
 <body>
-  <nav class="app-bar">
-    <button style="background-color: rgba(28,28,28,0); border: none; margin-left: 15px"><a href="/modelWindow.html"><img
-          src="/img/butt_menu.png" alt="button menu"
-          style="width: 18px; height: 12px; top: 46px; left: 19px; color: #FFFFFF;"></a></button>
-    <h1 style="display: inline-block; padding-left: 20px;position: relative; top: 3px">Популярні тури</h1>
-  </nav>
+<nav class="app-bar">
+  <div id="menuToggle">
+    <input type="checkbox" />
+    <span></span>
+    <span></span>
+    <span></span>
 
-  <div class="main-info">
+    <ul id="menu">
+      <a href="#"><li>Home</li></a>
+      <a href="#"><li>About</li></a>
+      <a href="#"><li>Info</li></a>
+      <a href="#"><li>Contact</li></a>
+      <a href="https://erikterwan.com/" target="_blank"><li>Show me more</li></a>
+    </ul>
+  </div>
+  <h1 class="general-title">Популярні тури</h1>
+</nav>
 
-    <div class="card">
-      <img src="/img/1.png" alt="first news" class="img-main">
-      <div class="content">
-        <h1 style="font-size: 15px"><a href="firstNews.html" class="more-info">Тур вихідного дня "Гостинність Чорнобаївки</a></h1>
-        <img src="./img/favourite.png" class="img-favourite-and-share">
-        <img src="./img/share.png" class="img-favourite-and-share">
-      </div>
-    </div>
+<div class="main-info">
 
-    <div class="card">
-    <img src="/img/2.png" alt="second news" class="img-main">
-      <div class="content">
-        <h1 style="font-size: 15px"><a href="secondNews.html" class="more-info">Дайвінг тур "таємниці змеїного"</a></h1>
-        <img src="./img/favourite.png" class="img-favourite-and-share">
-        <img src="./img/share.png" class="img-favourite-and-share">
-      </div>
-    </div>
-
-    <div class="card">
-      <img src="/img/3.png" alt="three news" class="img-main">
-      <div class="content">
-        <h1 style="font-size: 15px"><a href="threeNews.html" class="more-info">Сафарі тур "Гадяцький"</a></h1>
-        <img src="./img/favourite.png" class="img-favourite-and-share">
-        <img src="./img/share.png" class="img-favourite-and-share">
-      </div>
-    </div>
-
-    <div class="card">
-      <img src="/img/4.png" alt="four news" class="img-main">
-      <div class="content">
-        <h1 style="font-size: 15px"><a href="fourNews.html" class="more-info">Майстер клас "Ромський"</a></h1>
-        <img src="./img/favourite.png" class="img-favourite-and-share">
-        <img src="./img/share.png" class="img-favourite-and-share">
-      </div>
-    </div>
-
-    <div class="card">
-      <img src="/img/5.png" alt="five news" class="img-main">
-      <div class="content">
-        <h1 style="font-size: 15px"><a href="fiveNews.html" class="more-info">Квест тур "Київ за 3 дні</a></h1>
-        <img src="./img/favourite.png" class="img-favourite-and-share">
-        <img src="./img/share.png" class="img-favourite-and-share">
-      </div>
+  <div class="card">
+    <img src="/img/1.png" alt="first news" class="img-main">
+    <div class="content">
+      <h1 style="font-size: 15px"><a href="firstNews.html" class="more-info">Тур вихідного дня "Гостинність
+        Чорнобаївки</a></h1>
+      <img src="./img/favourite.png" class="img-favourite-and-share">
+      <img src="./img/share.png" class="img-favourite-and-share">
     </div>
   </div>
+
+  <div class="card">
+    <img src="/img/2.png" alt="second news" class="img-main">
+    <div class="content">
+      <h1 style="font-size: 15px"><a href="secondNews.html" class="more-info">Дайвінг тур "таємниці змеїного"</a></h1>
+      <img src="./img/favourite.png" class="img-favourite-and-share">
+      <img src="./img/share.png" class="img-favourite-and-share">
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="/img/3.png" alt="three news" class="img-main">
+    <div class="content">
+      <h1 style="font-size: 15px"><a href="threeNews.html" class="more-info">Сафарі тур "Гадяцький"</a></h1>
+      <img src="./img/favourite.png" class="img-favourite-and-share">
+      <img src="./img/share.png" class="img-favourite-and-share">
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="/img/4.png" alt="four news" class="img-main">
+    <div class="content">
+      <h1 style="font-size: 15px"><a href="fourNews.html" class="more-info">Майстер клас "Ромський"</a></h1>
+      <img src="./img/favourite.png" class="img-favourite-and-share">
+      <img src="./img/share.png" class="img-favourite-and-share">
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="/img/5.png" alt="five news" class="img-main">
+    <div class="content">
+      <h1 style="font-size: 15px"><a href="fiveNews.html" class="more-info">Квест тур "Київ за 3 дні</a></h1>
+      <img src="./img/favourite.png" class="img-favourite-and-share">
+      <img src="./img/share.png" class="img-favourite-and-share">
+    </div>
+  </div>
+</div>
 </body>
 
 </html>
