--- a/1-4 Moshnikov/index.html
+++ b/1-4 Moshnikov/index.html
@@ -8,20 +8,20 @@
     />
     <title>PZ_1_4</title>
     <link rel="stylesheet" type="text/css" href="./css/main.css" />
+
   </head>
   <body>
     <header>
       <div class="container">
         <input type="checkbox" id="sidenavbtn" />
-        <label for="sidenavbtn" class="menu-icon"
-          ><img src="img/menu.png"
-        /></label>
+        <label for="sidenavbtn" class="menu-icon"><img src="img/menu.png" /></label>
         <h1>Популярні тури</h1>
         <div class="sidenav">
           <div class="image-container">
             <img class="image-bottom" src="img/pixels.png" alt="Background" />
             <img class="image-top" src="img/avatar.png" alt="Avatar" />
           </div>
+          <button class="close-btn" onclick="closeMenu()">X</button>
           <div class="menu-items">
             <ul>
               <li><a href="#">Мій профіль</a></li>
@@ -34,45 +34,38 @@
       </div>
     </header>
 
-    <div class="main-content" >
+    <div class="main-content">
       <div class="tour-card">
-        <div class="tour-image">
-          <a href="index_first_tour.html">
-            <img
-              src="img/explosion.png"
-              alt="Тур вихідного дня 'Гостинність Чорнобаївки'"
-              class="modal-trigger"
-            />
-          </a>
-          <div class="tour-title">
-            Тур вихідного дня "Гостинність Чорнобіївки"
-            <div class="tour-actions">
-              <a href="index_tour.html"
-                ><img src="img/like.png" alt="Fav" class="action-icon"
-              /></a>
-              <a href="#"
-                ><img src="img/share.png" alt="Share" class="action-icon"
-              /></a>
+        <a href="index_first_tour.html" class="tour-link">
+          <div class="tour-image">
+            <img src="img/explosion.png" alt="Тур вихідного дня 'Гостинність Чорнобаївки'" class="modal-trigger" />
+            <div class="tour-title">
+              Тур вихідного дня "Гостинність Чорнобаївки"
+              <div class="tour-actions">
+                <a href="#" onclick="toggleLike(this)">
+                  <img src="img/like.png" alt="Fav" class="like-icon action-icon" />
+                </a>
+                <a href="#">
+                  <img src="img/share.png" alt="Share" class="action-icon" />
+                </a>
+              </div>
             </div>
           </div>
-        </div>
+        </a>
       </div>
 
       <div class="tour-card">
         <div class="tour-image">
-          <img
-            src="img/ship.png"
-            alt="Дайвінг-тур 'Таємниці Зміїного'"
-          />
+          <img src="img/ship.png" alt="Дайвінг-тур 'Таємниці Зміїного'" />
           <div class="tour-title">
             Дайвінг-тур "Таємниці Зміїного"
             <div class="tour-actions">
-              <a href="#"
-                ><img src="img/like.png" alt="Fav" class="action-icon"
-              /></a>
-              <a href="#"
-                ><img src="img/share.png" alt="Share" class="action-icon"
-              /></a>
+              <a href="#" onclick="toggleLike(this)">
+                <img src="img/like.png" alt="Fav" class="like-icon action-icon" />
+              </a>
+              <a href="#">
+                <img src="img/share.png" alt="Share" class="action-icon" />
+              </a>
             </div>
           </div>
         </div>
@@ -80,49 +73,49 @@
 
       <div class="tour-card">
         <div class="tour-image">
-         
-          <label for="modal-toggle-2">
-            <img
-              src="img/explosion.png"
-              alt="Тур вихідного дня 'Гостинність Чорнобаївки'"
-              class="tour-image"
-            />
-          </label>
-
+          <img src="img/explosion.png" alt="Тур вихідного дня 'Гостинність Чорнобаївки'" class="tour-image" />
           <div class="tour-title">
-            Сафарі-тур “Гадяцький”
+            Сафарі-тур "Гадяцький"
             <div class="tour-actions">
-              <a href="#"
-                ><img src="img/like.png" alt="Fav" class="action-icon"
-              /></a>
-              <a href="#"
-                ><img src="img/share.png" alt="Share" class="action-icon"
-              /></a>
+              <a href="#" onclick="toggleLike(this)">
+                <img src="img/like.png" alt="Fav" class="like-icon action-icon" />
+              </a>
+              <a href="#">
+                <img src="img/share.png" alt="Share" class="action-icon" />
+              </a>
             </div>
           </div>
         </div>
       </div>
 
+
       <div class="tour-card">
         <div class="tour-image">
-          <img
-            src="img/tractor.png"
-            alt="Майстер-клас 'Ромський'"
-          />
+          <img src="img/tractor.png" alt="Майстер-клас 'Ромський'" />
           <div class="tour-title">
-            Майстер-клас “Ромський”
+            Майстер-клас "Ромський"
             <div class="tour-actions">
-              <a href="#"
-                ><img src="img/like.png" alt="Fav" class="action-icon"
-              /></a>
-              <a href="#"
-                ><img src="img/share.png" alt="Share" class="action-icon"
-              /></a>
+              <a href="#" onclick="toggleLike(this)">
+                <img src="img/like.png" alt="Fav" class="like-icon action-icon" />
+              </a>
+              <a href="#">
+                <img src="img/share.png" alt="Share" class="action-icon" />
+              </a>
             </div>
           </div>
         </div>
       </div>
     </div>
 
+    <script>
+      function closeMenu() {
+        document.getElementById("sidenavbtn").checked = false;
+      }
+
+      function toggleLike(element) {
+        const icon = element.querySelector('.like-icon');
+        icon.classList.toggle('liked');
+      }
+    </script>
   </body>
 </html>
