--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             </div>
         </div>
 
+        
         <div class="card">
             <img src="img/image 10.png" alt="Квест-тур 'Київ за три дні'">
             <div class="overlay">
@@ -69,6 +70,16 @@
           </div>
       </div>
   </div>
+  <head>
+    <style>
+        .like-icon:hover {
+            filter: brightness(0) saturate(100%) invert(20%) sepia(100%) saturate(5000%) hue-rotate(340deg) brightness(95%) contrast(90%);
+            transform: scale(1.1); /* Збільшення сердечка для ефекту */
+            transition: transform 0.3s ease, filter 0.3s ease; /* Анімація */
+        }
+    </style>
+</head>
+
     </div>
 </body>
 </html>
