change absolute image paths

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div class="main-info">
 
   <div class="card">
-    <img src="/img/1.png" alt="first news" class="img-main">
+    <img src="./img/1.png" alt="first news" class="img-main">
     <div class="content">
       <h1 style="font-size: 15px"><a href="firstNews.html" class="more-info">Тур вихідного дня "Гостинність
         Чорнобаївки</a></h1>
@@ -41,7 +41,7 @@
   </div>
 
   <div class="card">
-    <img src="/img/2.png" alt="second news" class="img-main">
+    <img src="./img/2.png" alt="second news" class="img-main">
     <div class="content">
       <h1 style="font-size: 15px"><a href="secondNews.html" class="more-info">Дайвінг тур "таємниці змеїного"</a></h1>
       <img src="./img/favourite.png" class="img-favourite-and-share">
@@ -50,7 +50,7 @@
   </div>
 
   <div class="card">
-    <img src="/img/3.png" alt="three news" class="img-main">
+    <img src="./img/3.png" alt="three news" class="img-main">
     <div class="content">
       <h1 style="font-size: 15px"><a href="threeNews.html" class="more-info">Сафарі тур "Гадяцький"</a></h1>
       <img src="./img/favourite.png" class="img-favourite-and-share">
@@ -59,7 +59,7 @@
   </div>
 
   <div class="card">
-    <img src="/img/4.png" alt="four news" class="img-main">
+    <img src="./img/4.png" alt="four news" class="img-main">
     <div class="content">
       <h1 style="font-size: 15px"><a href="fourNews.html" class="more-info">Майстер клас "Ромський"</a></h1>
       <img src="./img/favourite.png" class="img-favourite-and-share">
@@ -68,7 +68,7 @@
   </div>
 
   <div class="card">
-    <img src="/img/5.png" alt="five news" class="img-main">
+    <img src="./img/5.png" alt="five news" class="img-main">
     <div class="content">
       <h1 style="font-size: 15px"><a href="fiveNews.html" class="more-info">Квест тур "Київ за 3 дні</a></h1>
       <img src="./img/favourite.png" class="img-favourite-and-share">
