change absolute image paths v2

--- a/fiveNews.html
+++ b/fiveNews.html
@@ -8,17 +8,17 @@
 </head>
 <body>
 <nav class="app-bar">
-  <a href="index.html" style="align-self: center"><img src="/img/back_button.png" alt="button menu" style="width: 16px;
+  <a href="index.html" style="align-self: center"><img src="./img/back_button.png" alt="button menu" style="width: 16px;
   height: 16px; top: 46px; left: 19px; color: #FFFFFF; padding-left: 10px"></a>
   <h1 class="title-news">
     Тур вихідного дня "Гостинність Чорнобаївки</h1>
-  <img src="/img/settings.png" alt="button menu" style="width: 12px;
+  <img src="./img/settings.png" alt="button menu" style="width: 12px;
   height: 24px; top: 64px; left: 19px; color: #FFFFFF; align-self: center; padding-right: 10px">
 </nav>
 
 <div class="main-info-details">
   <div class="card">
-    <img src="/img/5.png" alt="first news" class="img-detail">
+    <img src="./img/5.png" alt="first news" class="img-detail">
     <div class="content-detail">
       <img src="./img/favourite.png" class="img-favourite-details">
       <img src="./img/share.png" class="img-share-details">
@@ -32,7 +32,7 @@
   <div class="container-reviews">
     <h1>Відгуки</h1>
     <div class="card-container">
-      <img src="img/user1.png" class="img-user">
+      <img src="./img/user1.png" class="img-user">
       <div class="comments-card">
         <p class="text-comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad atque, commodi consequatur
           eveniet explicabo, illum
@@ -42,7 +42,7 @@
       </div>
     </div>
     <div class="card-container">
-      <img src="img/user2.png" class="img-user">
+      <img src="./img/user2.png" class="img-user">
       <div class="comments-card">
         <p class="text-comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad atque, commodi consequatur
           eveniet explicabo, illum</p>
@@ -53,11 +53,11 @@
   <div>
     <h1>Наступна подія</h1>
     <div style="display: flex">
-      <img src="img/icon-date.png" class="icon-details">
+      <img src="./img/icon-date.png" class="icon-details">
       <p><a href="" style="color: #6FB285; padding-left: 5px; text-decoration: none">15 травня 2022</a></p>
     </div>
     <div style="display: flex">
-      <img src="img/icon-people.png" class="icon-details">
+      <img src="./img/icon-people.png" class="icon-details">
       <p><a href="" style="color: #6FB285; padding-left: 8px; text-decoration: none">Кількість місць необмежена</a></p>
     </div>
   </div>
