--- a/firstNews.html
+++ b/firstNews.html
@@ -10,18 +10,18 @@
 
 
 <nav class="app-bar">
-  <a href="index.html" style="align-self: center"><img src="/img/back_button.png" alt="button menu" style="width: 16px;
+  <a href="index.html" style="align-self: center"><img src="./img/back_button.png" alt="button menu" style="width: 16px;
   height: 16px; top: 46px; left: 19px; color: #FFFFFF; padding-left: 10px"></a>
   <h1 class="title-news">
     Тур вихідного дня "Гостинність Чорнобаївки</h1>
-  <img src="/img/settings.png" alt="button menu" style="width: 12px;
+  <img src="./img/settings.png" alt="button menu" style="width: 12px;
   height: 24px; top: 64px; left: 19px; color: #FFFFFF; align-self: center; padding-right: 10px">
 </nav>
 
 
 <div class="main-info-details">
   <div class="card">
-    <img src="/img/1.png" alt="first news" class="img-detail">
+    <img src="./img/1.png" alt="first news" class="img-detail">
     <div class="content-detail">
       <img src="./img/favourite.png" class="img-favourite-details">
       <img src="./img/share.png" class="img-share-details">
@@ -35,7 +35,7 @@
   <div class="container-reviews">
     <h1>Відгуки</h1>
     <div class="card-container">
-      <img src="img/user1.png" class="img-user">
+      <img src="./img/user1.png" class="img-user">
       <div class="comments-card">
         <p class="text-comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad atque, commodi consequatur
           eveniet explicabo, illum
@@ -45,7 +45,7 @@
       </div>
     </div>
     <div class="card-container">
-      <img src="img/user2.png" class="img-user">
+      <img src="./img/user2.png" class="img-user">
       <div class="comments-card">
         <p class="text-comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad atque, commodi consequatur
           eveniet explicabo, illum</p>
