click on favorite

--- a/pz1.4 (1)/pz1.4/index.html
+++ b/pz1.4 (1)/pz1.4/index.html
@@ -528,8 +528,8 @@
                 Тур вихідного дня “Гостинність Чорнобаївки”
             </div>
             <div class="buttons">
-                <div class="favorite"></div>
-                <div class="share"></div>
+                <div class="favorite" onclick="showDetailView()"></div>
+                <div class="share"  onclick="showDetailView()"></div>
             </div>
         </div>
     </div>
@@ -537,7 +537,7 @@
         <div class="news-content">
             <div class="news-content-text">Дайвінг-тур "Таємниці Зміїного"</div>
             <div class="buttons">
-                <div class="favorite"></div>
+                <div class="favorite"  onclick="showDetailView()"></div>
                 <div class="share"></div>
             </div>
         </div>
