--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
-  <title>PZ_1_4</title>
-  <link rel="stylesheet" type="text/css" href="./css/main.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
+    <title>PZ_1_4</title>
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
+
 <body>
-<h1>Hello world!</h1>
+    <div class="container">
+        <header class="header">
+            <div class="menu menu-index">
+                <a href="./side.html">☰</a>
+            </div>
+            <div class="text-title">
+                <a>Популярні тури</a>
+            </div>
+        </header>
+        <div class="tour-card tour-bg1">
+            <div class="tour-content">
+                <div class="tour-content-text"><a href="./tour-page.html">Тур вихідного дня “Гостинність Чорнобаївки”</a>
+                </div>
+                <div class="buttons">
+                    <div class="favorite"></div>
+                    <div class="share"></div>
+                </div>
+            </div>
+        </div>
+        <div class="tour-card tour-bg2">
+            <div class="tour-content">
+                <div class="tour-content-text"><a href="./tour-page.html">Дайвінг-тур "Таємниці Зміїного"</a></div>
+                <div class="buttons">
+                    <div class="favorite"></div>
+                    <div class="share"></div>
+                </div>
+            </div>
+        </div>
+        <div class="tour-card tour-bg3">
+            <div class="tour-content">
+                <div class="tour-content-text"><a href="./tour-page.html">Сафарі-тур “Гадяцький”</a></div>
+                <div class="buttons">
+                    <div class="favorite"></div>
+                    <div class="share"></div>
+                </div>
+            </div>
+        </div>
+        <div class="tour-card tour-bg4">
+            <div class="tour-content">
+                <div class="tour-content-text"><a href="./tour-page.html">Майстер-клас “Ромський”</a></div>
+                <div class="buttons">
+                    <div class="favorite"></div>
+                    <div class="share"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+</style>
+
 </html>
