--- a/tourDesc.html
+++ b/tourDesc.html
@@ -3,19 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tour Details</title>
+    <title>Document</title>
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    <header id="tourHeader">
+    <header id="TourHeader">
         <a href="./index.html"><img src="./img/BBAck.png"></a>
-        <p id="tourTitle">Тур вихідного дня "Чор....."</p>
+        <p id="TourName">Тур вихідного дня "Чор....."</p>
         <img src="./img/MOORE.png">
     </header>
-
-    <div id="tourDetails">
-        <div id="imageOverlay">
-            <div id="imageGallery">
+    <div id="holidayTourOnPage">
+        <div id="interDivTour">
+            <div id="divTourImg">
                 <img src="./img/harosch.png" alt="">
                 <img src="./img/SAAS.png" alt="">
             </div>
+        </div>
+    </div>
+
+    <p id="TourDescText">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
+        incididunt ut labore et dolore magna wirl aliqua. Up exlaborum incididunt quis nostrud exercitatn.
+         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et 
+         dolore magna wirl aliqua. 
+    </p>
+
+    <p id="FeedBacks">Відгуки</p>
+    <div>
+        <img id="firstComment" src="./img/PERVUY.png" alt="">
+        <div id="firstCommentText">
+            <p class="one">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                 incididunt ut labore et dolore magna wirl aliqua. Up exlaborum
+                incididunt quis nostrud exercitatn. 
+            </p>
+        </div>
+        <img id="secondComment" src="./img/VTOROY.png" alt="">
+        <div id="secondCommentText">
+            <p class="one">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit
+            </p>
+        </div>
+    </div>
+    <p >Наступна подія</p>
+    <div>
+        <img width="20px" class="ImgUnderComment" src="./img/PONEDEL.png" alt="">
+        <p class="usefukInform">15 травня 2022</p>
+    </div>
+    <div>
+        <img width="20px" class="ImgUnderComment" src="./img/SOciAl.png" alt="">
+        <p class="usefukInform">Кількість місць обмежена</p>
+    </div>
+    <div id="ThisDIV">
+        <button id="lastButton">ЗАБРОНЮВАТИ</button>
+    </div>
+
+    
+</body>
+</html>
