I have change pz _1.4  Kozhukhar

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-      <a href="/menu.html">
-        <img src="img/menu.png" alt="" class="menu-image" >
+      <a href="./menu.html">
+        <img src="./img/menu.png" alt="" class="menu-image" >
       </a>
         <h3 class="header-text">
           <b>
@@ -20,8 +20,8 @@
 
     <main>
       <div class="photo-container">
-        <a href="/details.html">
-          <img src="img/image 6.png" alt="Тур вихідного дня" class="photo">
+        <a href="./details.html">
+          <img src="./img/image 6.png" alt="Тур вихідного дня" class="photo">
         </a>
         <div class="photo-overlay">
           <div class="photo-caption">
@@ -29,28 +29,29 @@
             “Гостинність Чорнобаївки”</p>
           </div>
           <div class="photo-icons">
-            <img src="img/Shape (1).png" alt="Лайк" class="icon-like-icon">
-            <img src="img/Shape.png" alt="Поділитися" class="icon-share-icon">
+            <a href="./details.html">
+            <img src="./img/Shape (1).png" alt="Лайк" class="icon-like-icon"></a>
+            <img src="./img/Shape.png" alt="Поділитися" class="icon-share-icon">
           </div>
         </div>
       </div>
 
       <div class="photo-container">
-        <img src="img/image 5.png" alt="Тур вихідного дня" class="photo">
+        <img src="./img/image 5.png" alt="Тур вихідного дня" class="photo">
         <div class="photo-overlay">
           <div class="photo-caption">
             <p>Дайвінг-тур <br>
               "Таємниці Зміїного"</p>
           </div>
           <div class="photo-icons">
-            <img src="img/Shape (1).png" alt="Лайк" class="icon-like-icon">
-            <img src="img/Shape.png" alt="Поділитися" class="icon-share-icon">
+            <img src="./img/Shape (1).png" alt="Лайк" class="icon-like-icon">
+            <img src="./img/Shape.png" alt="Поділитися" class="icon-share-icon">
           </div>
         </div>
       </div>
 
       <div class="photo-container">
-        <img src="img/image 8.png" alt="Тур вихідного дня" class="photo">
+        <img src="./img/image 8.png" alt="Тур вихідного дня" class="photo">
         <div class="photo-overlay">
           <div class="photo-caption">
             <p>Сафарі-тур “Гадяцький”" 
@@ -59,14 +60,14 @@
           </p>
           </div>
           <div class="photo-icons">
-            <img src="img/Shape (1).png" alt="Лайк" class="icon-like-icon">
-            <img src="img/Shape.png" alt="Поділитися" class="icon-share-icon">
+            <img src="./img/Shape (1).png" alt="Лайк" class="icon-like-icon">
+            <img src="./img/Shape.png" alt="Поділитися" class="icon-share-icon">
           </div>
         </div>
       </div>
 
       <div class="photo-container">
-        <img src="img/image 9.png" alt="Тур вихідного дня" class="photo">
+        <img src="./img/image 9.png" alt="Тур вихідного дня" class="photo">
         <div class="photo-overlay">
           <div class="photo-caption">
             <p>Майстер-клас “Ромський”
@@ -75,14 +76,14 @@
             </p>
           </div>
           <div class="photo-icons">
-            <img src="img/Shape (1).png" alt="Лайк" class="icon-like-icon">
-            <img src="img/Shape.png" alt="Поділитися" class="icon-share-icon">
+            <img src="./img/Shape (1).png" alt="Лайк" class="icon-like-icon">
+            <img src="./img/Shape.png" alt="Поділитися" class="icon-share-icon">
           </div>
         </div>
       </div>
 
       <div class="photo-container">
-        <img src="img/image 10.png" alt="Тур вихідного дня" class="photo">
+        <img src="./img/image 10.png" alt="Тур вихідного дня" class="photo">
         <div class="photo-overlay">
           <div class="photo-caption">
             <p>Квест-тур “Київ за три дні”
@@ -91,8 +92,8 @@
             </p>
           </div>
           <div class="photo-icons">
-            <img src="img/Shape (1).png" alt="Лайк" class="icon-like-icon">
-            <img src="img/Shape.png" alt="Поділитися" class="icon-share-icon">
+            <img src="./img/Shape (1).png" alt="Лайк" class="icon-like-icon">
+            <img src="./img/Shape.png" alt="Поділитися" class="icon-share-icon">
           </div>
         </div>
       </div>
@@ -100,9 +101,9 @@
     
     
     <footer>
-      <img src="img/back.png" alt="Повернутися назад" class="icon-back-icon">
-      <img src="img/home.png" alt="" class="icon-home-icon"> 
-      <img src="img/recent.png" alt="Поділитися" class="icon-recent-icon">
+      <img src="./img/back.png" alt="Повернутися назад" class="icon-back-icon">
+      <img src="./img/home.png" alt="" class="icon-home-icon"> 
+      <img src="./img/recent.png" alt="Поділитися" class="icon-recent-icon">
     </footer>
 </body>
 <br>
