--- a/menu.html
+++ b/menu.html
@@ -10,53 +10,53 @@
 <body>
   <main>
     <div class="avatar-position">
-      <img src="/img/imgForMenu/Pattern.png" alt="" class="background-img">
-      <img src="/img/imgForMenu/Ellipse 1.png" alt="Накладене зображення" class="overlay-image">
-      <img src="/img/imgForMenu/Vector.png" alt="Накладене зображення" class="vector-image">
+      <img src="./img/imgForMenu/Pattern.png" alt="" class="background-img">
+      <img src="./img/imgForMenu/Ellipse 1.png" alt="Накладене зображення" class="overlay-image">
+      <img src="./img/imgForMenu/Vector.png" alt="Накладене зображення" class="vector-image">
       <h3 class="account-signature" >Андрій Кожухар</h3>
     </div>
 
     <div class="icon-text-container">
       <div class="icon-text">
-          <img src="/img/imgForMenu/trash.png" alt="Icon 1" class="icon">
+          <img src="./img/imgForMenu/trash.png" alt="Icon 1" class="icon">
           <span class="text">Мій профіль</span>
       </div>
       <div class="icon-text">
-          <img src="/img/imgForMenu/purchases.png" alt="Icon 2" class="icon">
+          <img src="./img/imgForMenu/purchases.png" alt="Icon 2" class="icon">
           <span class="text">Замовлення</span>
       </div>
       <div class="icon-text">
-          <img src="/img/imgForMenu/forums.png" alt="Icon 3" class="icon">
+          <img src="./img/imgForMenu/forums.png" alt="Icon 3" class="icon">
           <span class="text">Повідомлення</span>
       </div>
       <div class="icon-text">
-        <img src="/img/imgForMenu/favorite.png" alt="Icon 2" class="icon">
+        <img src="./img/imgForMenu/favorite.png" alt="Icon 2" class="icon">
         <span class="text">Улюблене</span>
       </div>
       <div class="icon-text">
-        <img src="/img/imgForMenu/social.png" alt="Icon 3" class="icon">
+        <img src="./img/imgForMenu/social.png" alt="Icon 3" class="icon">
         <span class="text">Друзі</span>
       </div>
       <div class="icon-text">
-        <img src="/img/imgForMenu/updates.png" alt="Icon 2" class="icon">
+        <img src="./img/imgForMenu/updates.png" alt="Icon 2" class="icon">
         <span class="text">Сповіщення</span>
      </div>
       <div class="icon-text">
-        <img src="/img/imgForMenu/Fill 4.png" alt="Icon 3" class="icon">
+        <img src="./img/imgForMenu/Fill 4.png" alt="Icon 3" class="icon">
         <span class="text">Налаштування</span>
      </div>
   </div>
   
     <div class="exit">
-      <a href="index.html">
-      <img src="/img/imgForMenu/close.png" alt="close" class="close-img" >
+      <a href="./index.html">
+      <img src="./img/imgForMenu/close.png" alt="close" class="close-img" >
       </a>
     </div>
   </main>
   <footer>
-      <img src="img/back.png" alt="Повернутися назад" class="icon-back-icon">
-      <img src="img/home.png" alt="" class="icon-home-icon"> 
-      <img src="img/recent.png" alt="Поділитися" class="icon-recent-icon">
+      <img src="./img/back.png" alt="Повернутися назад" class="icon-back-icon">
+      <img src="./img/home.png" alt="" class="icon-home-icon"> 
+      <img src=",.img/recent.png" alt="Поділитися" class="icon-recent-icon">
     </footer>
 </body>
 </html>
