changes were made in accordance with the comments

--- a/index.html
+++ b/index.html
@@ -35,29 +35,25 @@
     </header>
 
     <div class="main-content">
-      <div class="tour-card">
-        <div class="tour-image">
-          <a href="tour1.html">
+      <a href="tour1.html" class="tour-card-link">
+        <div class="tour-card">
+          <div class="tour-image">
             <img
               src="img/Тур вихідного дня “Гостинність Чорнобаївки”.png"
               alt="Тур вихідного дня 'Гостинність Чорнобаївки'"
               class="modal-trigger"
             />
-          </a>
+          </div>
           <div class="tour-title">
             Тур вихідного дня "Гостинність Чорнобіївки"
             <div class="tour-actions">
-              <a href="#"
-                ><img src="img/favorite.png" alt="Fav" class="action-icon"
-              /></a>
-              <a href="#"
-                ><img src="img/Shape.png" alt="Share" class="action-icon"
-              /></a>
+              <img src="img/favorite.png" alt="Fav" class="action-icon" />
+              <img src="img/Shape.png" alt="Share" class="action-icon" />
             </div>
           </div>
         </div>
-      </div>
-
+      </a>
+      
       <div class="tour-card">
         <div class="tour-image">
           <img
