add red heart on hover

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="eam__content_nav">
           <a href="detailsPage.html">Тур вихідного дня "Гостинність Чорнобаївки"</a>
           <div class="eam__interact">
-            <img src="./img/side/heart.png" alt="like" class="eam__interact_img"/>
+             <img src="./img/side/heart.png" alt="like" class="eam__interact_img heart"/>
             <img src="./img/side/share.png" alt="share" class="eam__interact_img"/>
           </div>
         </div>
@@ -80,7 +80,7 @@
         <div class="eam__content_nav">
           <a href="detailsPage.html">Дайвінг-тур "Таємниці Зміїного"</a>
           <div class="eam__interact">
-            <img src="./img/side/heart.png" alt="like" class="eam__interact_img"/>
+             <img src="./img/side/heart.png" alt="like" class="eam__interact_img heart"/>
             <img src="./img/side/share.png" alt="share" class="eam__interact_img"/>
           </div>
         </div>
@@ -91,7 +91,7 @@
         <div class="eam__content_nav">
           <a href="detailsPage.html">Сафарі-тур “Гадяцький”</a>
           <div class="eam__interact">
-            <img src="./img/side/heart.png" alt="like" class="eam__interact_img"/>
+             <img src="./img/side/heart.png" alt="like" class="eam__interact_img heart"/>
             <img src="./img/side/share.png" alt="share" class="eam__interact_img"/>
           </div>
         </div>
@@ -102,7 +102,7 @@
         <div class="eam__content_nav">
           <a href="detailsPage.html">Майстер-клас “Ромський”</a>
           <div class="eam__interact">
-            <img src="./img/side/heart.png" alt="like" class="eam__interact_img"/>
+             <img src="./img/side/heart.png" alt="like" class="eam__interact_img heart"/>
             <img src="./img/side/share.png" alt="share" class="eam__interact_img"/>
           </div>
         </div>
@@ -113,7 +113,7 @@
         <div class="eam__content_nav">
           <a href="detailsPage.html">Квест-тур “Київ за три дні”</a>
           <div class="eam__interact">
-            <img src="./img/side/heart.png" alt="like" class="eam__interact_img"/>
+             <img src="./img/side/heart.png" alt="like" class="eam__interact_img heart"/>
             <img src="./img/side/share.png" alt="share" class="eam__interact_img"/>
           </div>
         </div>
